# ColorCompass

./: CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  setup.py
color-compass/: __init__.py  color_compass.py  color_dictionary.py
colorcompass/: __init__.py  color_compass.py  color_dictionary.py
src/: colors.py
