[tool.poetry]
name = "colorcompass"
version = "0.1.0"
description = "ColorCompass: Navigating through the spectrum of colors with ease."
authors = ["Nicolas Aguirre <aguirrecampi.nicolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
